VertexGroup.add() doesn't push depsgraph update for the mesh. #62104

Closed
opened 2019-03-02 02:25:34 +01:00 by Demeter Dzadik · 4 comments
Member

Blender Version
Broken: 2.80, d7d180bd3d

Short description of error
I'm changing the weights of a vertex group via script. This vertex group is then used by a Mask modifier. The changes by the script however are not visible until I either change object modes on the object, or toggle the mask modifier on and off, or change a shape key value. My understanding is that these actions cause the depsgraph to update the mesh datablock, whereas simply assigning vertex weights does not, which results in unexpected behaviour, or rather, lack of expected behaviour.

Exact steps for others to reproduce the error
vertex_group_add_doesnt_update_mask.blend

  • Download attached blend
  • Run script
  • Notice how the cube is unchanged
  • Change object mode, add a shape key, or toggle the mask modifier, and notice that the cube updates, and some of its verts are now correctly displayed as masked.
**Blender Version** Broken: 2.80, d7d180bd3d8d **Short description of error** I'm changing the weights of a vertex group via script. This vertex group is then used by a Mask modifier. The changes by the script however are not visible until I either change object modes on the object, or toggle the mask modifier on and off, or change a shape key value. My understanding is that these actions cause the depsgraph to update the mesh datablock, whereas simply assigning vertex weights does not, which results in unexpected behaviour, or rather, lack of expected behaviour. **Exact steps for others to reproduce the error** [vertex_group_add_doesnt_update_mask.blend](https://archive.blender.org/developer/F6740343/vertex_group_add_doesnt_update_mask.blend) - Download attached blend - Run script - Notice how the cube is unchanged - Change object mode, add a shape key, or toggle the mask modifier, and notice that the cube updates, and some of its verts are now correctly displayed as masked.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Sebastian Parborg self-assigned this 2019-03-02 12:34:12 +01:00

I've posted a fix: D4439

I've posted a fix: [D4439](https://archive.blender.org/developer/D4439)

This issue was referenced by 36cd31060b

This issue was referenced by 36cd31060b6db6a81668996757bf166cfff38a22

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62104
No description provided.